--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 
-div{
+#ok{
+    margin-top: 15px;
     width: 200px;
     height: 100px;
     background-color: green;
@@ -7,7 +8,7 @@ div{
 }
 
 @media screen and (max-width: 400px) {
-    div{
+    #ok{
         width: 200px;
         height: 100px;
         background-color: blue;
