--- a/partials/other.html
+++ b/partials/other.html
@@ -1,11 +1,11 @@
 <h1>Ici du crud</h1>
-<form>
+<form name="formulaire" novalidate>
     <div class="row">
         <div class="col-lg-12">
             <div class="input-group">
-            <input type="text" class="form-control" placeholder="Nom" ng-model="nom">
+            <input type="text" class="form-control" placeholder="Nom" ng-model="nom" ng-pattern="/^[a-z]+$/i" name="nom">
             <span class="input-group-btn">
-                <button class="btn btn-success" type="button" ng-click="ajoutePersonne(nom)">Ajouter</button>
+                <button class="btn btn-success" type="button" ng-click="ajoutePersonne(nom)" ng-disabled="formulaire.nom.$invalid">Ajouter</button>
             </span>
         </div><!-- /input-group -->
     </div><!-- /.row -->
